sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: forward reference extends over definition of variable i
var i=lg-2
      ^