sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var i=lg-2
var lg=getNombreValeurs()
	while(i>=0){
		for(j<-0 to i){
	if ( plusPetit( j+1, j)){
		echange(j, j+1)
	}
	
	i=i-1 }
	}
}

